# buddy

./: LICENSE  README.md  main.py  pyproject.toml  schema.sql
bot/: checkins.py  config.py  database.py  goals.py  scheduler.py  streaks.py  views.py
bot/cogs/: checkins.py  goals.py  setup.py  social.py
